--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
             border: 1px solid rgba(255, 255, 255, 0.08);
         }
         
-        /* THE ULTIMATE CLIPPING PREVENTION SYSTEM */
         .italic-fix, h1, h2, h3, .font-display {
             overflow: visible !important;
-            padding-right: 0.5em !important; /* Increased for JSA style bold italics */
+            padding-right: 0.5em !important; 
             padding-left: 0.05em !important;  
             line-height: 1.1 !important;    
             display: inline-block;           
@@ -52,7 +51,6 @@
             display: block;
         }
 
-        /* High-Energy Buttons */
         .btn-primary {
             background-color: var(--apex-accent);
             color: #ffffff;
@@ -67,77 +65,13 @@
             transform: translateY(-3px) scale(1.02);
             box-shadow: 0 20px 40px -10px rgba(168, 85, 247, 0.4);
         }
-        .btn-primary:active {
-            transform: translateY(0) scale(0.98);
-        }
 
-        .btn-stark {
-            background-color: #ffffff;
-            color: #000000;
-            font-weight: 900;
-            text-transform: uppercase;
-            letter-spacing: 0.25em;
-            transition: all 0.3s ease;
-        }
-        .btn-stark:hover {
-            background-color: #e5e5e5;
-            transform: translateY(-2px);
-        }
-
-        .btn-secondary {
-            background-color: rgba(255, 255, 255, 0.05);
-            color: #ffffff;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: all 0.3s ease;
-        }
-        .btn-secondary:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            border-color: var(--apex-accent);
-        }
-
-        /* Table Specifics */
-        .table-row-border {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-        }
-
-        /* Subtle Flash Animation */
-        @keyframes flash-purple {
-            0% { opacity: 1; box-shadow: 0 0 0px rgba(168, 85, 247, 0); }
-            50% { opacity: 0.85; box-shadow: 0 0 30px rgba(168, 85, 247, 0.3); }
-            100% { opacity: 1; box-shadow: 0 0 0px rgba(168, 85, 247, 0); }
-        }
-        .animate-flash-purple {
-            animation: flash-purple 3s ease-in-out infinite;
-        }
-
-        /* Custom Scrollbar */
         .custom-scrollbar::-webkit-scrollbar {
             width: 6px;
-        }
-        .custom-scrollbar::-webkit-scrollbar-track {
-            background: transparent;
         }
         .custom-scrollbar::-webkit-scrollbar-thumb {
             background: #27272a;
             border-radius: 10px;
-        }
-        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-            background: var(--apex-accent);
-        }
-
-        /* Global Scrollbar */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #0a0a0a;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #27272a;
-            border-radius: 10px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: var(--apex-accent);
         }
 
         @media (max-width: 768px) {
@@ -148,21 +82,21 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react/": "https://esm.sh/react@19.0.0/",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@19.0.0,react-dom@19.0.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.475.0?deps=react@19.0.0",
-    "react-hook-form": "https://esm.sh/react-hook-form@7.51.2?deps=react@19.0.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react-hook-form": "https://esm.sh/react-hook-form@^7.69.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
